--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
-[wheel]
+[bdist_wheel]
 # create "py2.py3-none-any.whl" package
 universal = 1
+
+[zest.releaser]
+python-file-with-version = parler/__init__.py
